Fixed warnings. Adjusted readme.md